--- a/index.html
+++ b/index.html
@@ -8,11 +8,8 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="clicker">
-      <p>Количество кликов: <span id="counter">0</span></p>
-      <button id="clickBtn">Нажми меня</button>
-    </div>
-    <p>You have clicked <span id="click-count">0</span> times.</p>
-    <script src="script.js"></script>
+  <button id="clicker">Click me!</button>
+  <p>You have clicked <span id="click-count">0</span> times.</p>
+  <script src="script.js"></script>
 </body>
 </html>
